[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/HeathBar/HealthBarBorder.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/HeathBar/HealthBarFull.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/HealthBar/Player/PlayerHealthBar.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/HeathBar/HealthBarBg.png" type="Texture" id=4]

[node name="HealthBar" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="HealthBarUnder" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 50.0
min_value = 1.0
value = 1.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_over = Color( 0.290196, 0.231373, 0.231373, 0.117647 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
min_value = 1.0
value = 1.0
texture_under = ExtResource( 1 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
tint_over = Color( 0.290196, 0.231373, 0.231373, 0.117647 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]
